Fix vertical spacing around h2

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -19,7 +19,7 @@ h1, h2, p, dl {
 }
 
 h2 {
-  margin-top: 1em;
+  margin-top: 2em;
 }
 
 p {
@@ -79,7 +79,7 @@ h1 > a {
 }
 
 .link-list {
-  margin-top: 3em;
+  margin-top: 2em;
 }
 
 .link-icon{
